@@ -1,0 +1,8 @@
+package MojoMyInherit;
+use MojoMy -base;
+
+with_namespace 'that is my namespace';
+with_prefix 'this';
+
+
+1;
