@@ -1,0 +1,12 @@
+package main;
+$|++;
+use MojoMyInherit;
+
+MojoMyInherit->new;
+
+print $MojoMyInherit::NAMESPACE;
+
+1;
+
+__END__
+
