@@ -1,2 +1,3 @@
 0.01 2013-02-07
         - Initial submission to GitHub.
+	- Change class variables to use parameters.
